<resources>
    <string name="app_name">There4U</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_return">ReturnActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="action_deep_link">
        com.google.android.gms.samples.appinvite.DEEP_LINK_ACTION
    </string>

    <string name="invite">Send invitations!</string>
    <string name="welcome">Invites</string>
    <string name="referrer_hint">Deep link not provided</string>
    <string name="deep_link_default">Deep link not set</string>
    <string name="invitation_id_default">Invitation ID not set</string>
    <string name="invite_friends">Invite Friends</string>

    <string name="invitation_title">Join the There4U family today</string>
    <string name="invitation_message">There4U is the app you can depend on</string>
    <string name="invitation_deep_link">https://quw5p.app.goo.gl/Scq6r</string>
    <string name="invitation_custom_image">https://cdn.discordapp.com/attachments/293759137123270656/341412472990728192/There4U_High.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <string name="default_notification_channel_name" translatable="true">News</string>

    <string name="deep_link_fmt" formatted="false">Deep Link: %s</string>

    <string name="send_failed">Sending invitations failed</string>
    <string name="invite_dialog_title">You got an invitation!</string>

    <string name="google_play_services_error">Google Play Services Error</string>


    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

    <string name="title_activity_user_info">User Profile</string>
    <string name="dummy_button">Edit Profile</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="click_to_sign_in">Sign In</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="go_to_next">Go to Next</string>
    <string name="register">Register</string>
    <string name="upload_image">Upload Image</string>
    <string name="name">Name :</string>
    <string name="update_user_info">Update User Profile</string>
    <string name="email">Email :</string>
    <string name="submit">Submit</string>
    <string name="phone">Phone # :</string>
    <string name="company">Company :</string>
    <string name="user_info">User Profile</string>
    <string name="title_activity_my_job_service">MyJobService</string>
    <string name="show_map">Show Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="display_name">Display Name</string>
    <string name="status_text_view">Status</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="email_settings">Email</string>
    <string name="phone_settings">Phone</string>
    <string name="company_settings">Company</string>
    <string name="update_details_btn">Update Details</string>
    <string name="enter_user_info">Enter User Info</string>
    <string name="status">Status :</string>
    <string name="go_to_profile">Go to Profile</string>

</resources>
