<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#54afe2"
    tools:context="com.project.x12112241.there4u.SettingsActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="190dp"
        android:layout_height="190dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/alonebit" />

    <TextView
        android:id="@+id/settings_Displayname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/display_name"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/settings_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_Displayname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/email_settings"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/settings_Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_Email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/phone_settings"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/settings_Company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_Phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/company_settings"
        android:textColor="@android:color/white"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/settings_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_Company"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/status_text_view"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/change_Img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/change_image"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#54afe0"
        fancy:fb_focusColor="#9bd823"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="20dp"
        android:layout_below="@+id/settings_status"
        android:layout_centerHorizontal="true" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/status_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Go To Main Screen"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#54afe0"
        fancy:fb_focusColor="#9bd823"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="20dp"
        android:layout_below="@+id/change_Img_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp" />
</RelativeLayout>
