<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="328dp"
        android:layout_height="245dp"
        app:srcCompat="@drawable/t4ulogo"
        android:layout_alignTop="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_info"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:id="@+id/textView"
        android:layout_marginTop="20dp" />


    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="220dp"
        android:gravity="bottom"
        android:textStyle="bold"
        android:includeFontPadding="false"
        android:text="@string/name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="200dp"
        android:layout_height="50dp"

        android:elevation="0dp"
        android:gravity="bottom"
        android:inputType="textPersonName"
        android:textAlignment="inherit"
        android:layout_alignBottom="@+id/imageView5"
        android:layout_toRightOf="@+id/textName"
        android:layout_toEndOf="@+id/textName" />

    <TextView
        android:text="@string/email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/textName"
        android:layout_alignEnd="@+id/textName"
        android:gravity="bottom"
        android:id="@+id/textEmail"
        android:textStyle="bold"
        android:layout_alignRight="@+id/textName"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:elevation="0dp"
        android:layout_toRightOf="@+id/textEmail"
        android:gravity="bottom"
        android:textAlignment="inherit"
        android:layout_below="@+id/textName"
        android:inputType="textEmailAddress" />

    <TextView
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="bottom"
        android:id="@+id/textPhone"
        android:layout_below="@+id/textEmail"
        android:layout_toLeftOf="@+id/etEmail"
        android:layout_toStartOf="@+id/etEmail"
        android:textStyle="bold"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textEmail"
        android:layout_toRightOf="@+id/textPhone"
        android:elevation="0dp"
        android:gravity="bottom"
        android:inputType="phone"
        android:textAlignment="inherit" />

    <TextView
        android:text="@string/company"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="bottom"
        android:id="@+id/textCompany"
        android:layout_below="@+id/textPhone"
        android:textStyle="bold"
        android:layout_toLeftOf="@+id/etPhone"
        android:layout_toStartOf="@+id/etPhone"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etCompany"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:elevation="0dp"
        android:layout_toRightOf="@+id/textCompany"
        android:gravity="bottom"
        android:textAlignment="inherit"
        android:layout_below="@+id/textPhone"
        android:inputType="text" />


    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#54afe0"
        fancy:fb_focusColor="#9bd823"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="20dp"
        android:layout_below="@+id/etCompany"
        android:layout_marginTop="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <mehdi.sakout.fancybuttons.FancyButton
        android:id="@+id/image_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/upload_image"
        fancy:fb_borderColor="#FFFFFF"
        fancy:fb_borderWidth="1dp"
        fancy:fb_defaultColor="#54afe0"
        fancy:fb_focusColor="#9bd823"
        fancy:fb_iconPosition="left"
        fancy:fb_radius="20dp"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/btnSubmit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:srcCompat="@drawable/common_full_open_on_phone"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/iMage_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView"
        fancy:srcCompat="@drawable/common_full_open_on_phone" />

</RelativeLayout>
